--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,14 +3,8 @@
 
 {%- include head.html -%}
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>MathJax example</title>
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
-    </script>
-</head>
+
+
 
 <body>
 
@@ -25,5 +19,11 @@
     {%- include footer.html -%}
 
 </body>
+
+<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+<script
+    type="text/x-mathjax-config"> MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']],processEscapes: true}}) </script>
+<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+</script>
 
 </html>
