--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: " en" }}">
 
-{%- include head.html -%}
+{% include head.html %}
 
 
 
@@ -20,10 +20,6 @@
 
 </body>
 
-<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-<script
-    type="text/x-mathjax-config"> MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']],processEscapes: true}}) </script>
-<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
-</script>
+
 
 </html>
