--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,25 +1,19 @@
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: " en" }}">
+<html lang="{{ page.lang | default: site.lang | default: " en" }} ">
 
 {% include head.html %}
 
 
-
-
 <body>
 
-    {%- include header.html -%}
+    {% include header.html %}
 
-    <main class="page-content" aria-label="Content">
-        <div class="wrapper">
-            {{ content }}
-        </div>
-    </main>
-
-    {%- include footer.html -%}
-
+    <main class=" page-content" aria-label="Content">
+<div class="wrapper">
+    {{ content }}
+</div>
+{% include footer.html %}
+</main>
 </body>
-
-
 
 </html>
