--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: " en" }} ">
+<html>
 
 {% include head.html %}
 
@@ -9,11 +9,11 @@
     {% include header.html %}
 
     <main class=" page-content" aria-label="Content">
-<div class="wrapper">
-    {{ content }}
-</div>
-{% include footer.html %}
-</main>
+        <div class="wrapper">
+            {{ content }}
+        </div>
+
+    </main>
 </body>
 
 </html>
