--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,26 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: " en" }}">
 
-{%- include head.html -%}
+<head>
+    <meta charset="UTF-8">
+    <script>
+        MathJax = {
+            tex: {
+                inlineMath: [['$', '$'], ['\\(', '\\)']],
+                displayMath: [['$$', '$$'], ["\\[", "\\]"]],
+                processEscapes: true,
+            }
+        };
+    </script>
+
+
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+
+    <script type="text/javascript" id="MathJax-script" async
+        src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+        </script>
+
+</head>
 
 <body>
 
@@ -14,21 +33,7 @@
     </main>
 
 
-    <script>
-        MathJax = {
-            tex: {
-                inlineMath: [['$', '$'], ['\\(', '\\)']],
-                displayMath: [['$$', '$$'], ["\\[", "\\]"]],
-            }
-        };
-    </script>
 
-
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-
-    <script type="text/javascript" id="MathJax-script" async
-        src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
-        </script>
 
 </body>
 
