modify the layout again

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: " en" }}">
 
-
+{%- include head.html -%}
 
 <body>
 
@@ -12,6 +12,7 @@
             {{ content }}
         </div>
     </main>
+
 
     <script>
         MathJax = {
